hard-gists/1321585/run.log
=== Docker Run Log for 1321585 ===
Started at: Mi 29. Okt 12:07:07 CET 2025

[2025-10-29 12:07:07] START: Running container for 1321585
[2025-10-29 12:07:07] SUCCESS: Container b6dcd913b61b0b13566b2147902965e5255db152cc69a4ec46128c5d74bb149b started for 1321585
=== Container logs for 1321585 ===
  File "/snippet.py", line 122
    print theta, J_history
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1321585 ===
[2025-10-29 12:07:09] INFO: Container b6dcd913b61b0b13566b2147902965e5255db152cc69a4ec46128c5d74bb149b has stopped
